# rsrch

./: .gitignore  README.md  cli.py  dates.py  download.py  main.py  push.py  pyproject.toml  requirements.txt  utils.py
examples/: yitay.md
rsrch/: __init__.py
rsrch/_src/: labml.py  notion.py  rsrch.py
src/: ai.py  bot.py  cli.py  rsrch.py
