[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rsrch"
authors = [
  { name="Ishan Shah", email="ishan0102@utexas.edu" },
]
description = "Manage your ever-growing list of research papers"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "arxiv==1.4.2",
    "click==8.1.3",
    "notion-client==2.0.0",
    "python-dotenv==0.21.0",
    "requests==2.28.1",
    "tqdm==4.64.1",
    "urllib3==1.26.13",
]
dynamic = ["version"]

[project.urls]
"Homepage" = "https://github.com/ishan0102/rsrch"
"Bug Tracker" = "https://github.com/ishan0102/rsrch/issues"

[tool.hatch.version]
path = "rsrch/__about__.py"
